[auth] [skip ci] implement to api gateway with auth middleware
