# api-gateway/internal/api/http/routing.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"coinflow/coinflow-server/api-gateway/internal/middleware"
 	pkgHandlers "coinflow/coinflow-server/pkg/http/handlers"
 
 	"github.com/gin-gonic/gin"
@@ -10,6 +11,11 @@ const (
 	GetTransactionPath = "/transaction/id/:tx_id"
 	GetTransactionsInPeriodPath = "/transaction/period"
 	PostTransactionPath = "/commit"
+
+	LoginPath = "/auth/login"
+	RefreshPath = "/auth/refresh"
+	RegisterPath = "/auth/register"
+	GetUserDataPath = "/user/:usr_id"
 )
 
 func (s *CoinflowServer) RouteHandlers(engine *gin.Engine, opts ...pkgHandlers.RouterOption) {
@@ -18,10 +24,23 @@ func (s *CoinflowServer) RouteHandlers(engine *gin.Engine, opts ...pkgHandlers.R
 	}
 }
 
-func (s *CoinflowServer) WithStandardUserHandlers() pkgHandlers.RouterOption {
+func (s *CoinflowServer) WithAuthServiceHandlers() pkgHandlers.RouterOption {
 	return func(engine *gin.Engine) {
-		engine.GET(GetTransactionPath, s.GetTransactionHandler)
-		engine.POST(GetTransactionsInPeriodPath, s.GetTransactionsInPeriodHandler)
-		engine.POST(PostTransactionPath, s.PostTransactionHandler)
+		engine.POST(LoginPath, s.LoginHandler)
+		engine.POST(RefreshPath, s.RefreshHandler)
+		engine.POST(RegisterPath, s.RegisterHandler)
+	}
+}
+
+func (s *CoinflowServer) WithSecuredUserHandlers(publicKey []byte) pkgHandlers.RouterOption {
+	return func(engine *gin.Engine) {
+		authGroup := engine.Group("/")
+		authGroup.Use(middleware.WithAuthMiddleware(publicKey))
+
+		authGroup.GET(GetTransactionPath, s.GetTransactionHandler)
+		authGroup.POST(GetTransactionsInPeriodPath, s.GetTransactionsInPeriodHandler)
+		authGroup.POST(PostTransactionPath, s.PostTransactionHandler)
+	
+		authGroup.GET(GetUserDataPath, s.GetUserDataHandler)
 	}
 }
