# api-gateway/internal/api/http/server.go
@@ -1,8 +1,10 @@
 package http
 
 import (
+	"coinflow/coinflow-server/api-gateway/config"
 	"coinflow/coinflow-server/api-gateway/internal/api/http/types"
 	"coinflow/coinflow-server/api-gateway/internal/clients/grpc"
+	"math"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -11,14 +13,25 @@ import (
 type CoinflowServer struct {
 	storageCli grpc.StorageClient
 	collectCli grpc.CollectionClient
+	authCli grpc.AuthClient
+	securityCfg config.SecurityConfig
 }
 
-func NewCoinflowServer(storageCli grpc.StorageClient, collectCli grpc.CollectionClient) *CoinflowServer {
+func NewCoinflowServer(
+	storageCli grpc.StorageClient,
+	collectCli grpc.CollectionClient,
+	authCli grpc.AuthClient,
+	securityCfg config.SecurityConfig,
+) *CoinflowServer {
 	return &CoinflowServer{
 		storageCli: storageCli,
 		collectCli: collectCli,
+		authCli: authCli,
+		securityCfg: securityCfg,
 	}
 }
+
+// Transactions ----------------------------------------------
 
 // @Summary GetTransaction
 // @Description get transaction by id
@@ -28,6 +41,7 @@ func NewCoinflowServer(storageCli grpc.StorageClient, collectCli grpc.Collection
 // @Param tx_id path string true "Transaction ID"
 // @Success 200 {object} string "OK"
 // @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
 // @Failure 404 {object} string "Not found"
 // @Failure 500 {object} string "Internal error"
 // @Router /transaction/id/{tx_id} [get]
@@ -55,6 +69,7 @@ func (s *CoinflowServer) GetTransactionHandler(c *gin.Context) {
 // @Param reqObj body types.GetTransactionsInPeriodRequestObject true "Request object"
 // @Success 200 {object} string "OK"
 // @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
 // @Failure 404 {object} string "Not found"
 // @Failure 500 {object} string "Internal error"
 // @Router /transaction/period [post]
@@ -90,6 +105,7 @@ func (s *CoinflowServer) GetTransactionsInPeriodHandler(c *gin.Context) {
 // @Param tx body models.Transaction true "transaction"
 // @Success 201 {object} string "Created"
 // @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
 // @Failure 500 {object} string "Internal error"
 // @Router /commit [post]
 func (s *CoinflowServer) PostTransactionHandler(c *gin.Context) {
@@ -108,4 +124,136 @@ func (s *CoinflowServer) PostTransactionHandler(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{
 		"tx_id": res,
 	})
+}
+
+// Users ---------------------------------------------
+
+func (s *CoinflowServer) setAccessToken(c *gin.Context, token string) {
+	c.SetCookie("accessToken", token,
+		int(math.Ceil(s.securityCfg.AccessExpirationTime.Seconds())),
+		"",
+		"",
+		true,
+		true,
+	)
+}
+
+// @Summary Login
+// @Description login and get tokens
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param reqObj body types.LoginRequestObject true "request object"
+// @Success 200 {object} string "OK"
+// @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 500 {object} string "Internal error"
+// @Router /auth/login [post]
+func (s *CoinflowServer) LoginHandler(c *gin.Context) {
+	reqObj, err := types.CreateLoginRequestObject(c)
+	if err != nil {
+		WriteParseError(c, err)
+		return
+	}
+
+	access, refresh, err := s.authCli.Login(reqObj.Login, reqObj.Password)
+	if err != nil {
+		WriteGrpcError(c, err)
+		return
+	}
+
+	s.setAccessToken(c, access)
+
+	c.JSON(http.StatusOK, gin.H{
+		"access_token": access,
+		"refresh_token": refresh,
+	})
+}
+
+// @Summary Refresh
+// @Description refresh and get new tokens
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param reqObj body types.RefreshRequestObject true "request object"
+// @Success 200 {object} string "OK"
+// @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 500 {object} string "Internal error"
+// @Router /auth/refresh [post]
+func (s *CoinflowServer) RefreshHandler(c *gin.Context) {
+	reqObj, err := types.CreateRefreshRequestObject(c)
+	if err != nil {
+		WriteParseError(c, err)
+		return
+	}
+
+	access, refresh, err := s.authCli.Refresh(reqObj.RefreshToken)
+	if err != nil {
+		WriteGrpcError(c, err)
+		return
+	}
+
+	s.setAccessToken(c, access)
+
+	c.JSON(http.StatusOK, gin.H{
+		"access_token": access,
+		"refresh_token": refresh,
+	})
+}
+
+// @Summary Register
+// @Description register new user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param reqObj body types.RegisterRequestObject true "request object"
+// @Success 201 {object} string "Created"
+// @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 500 {object} string "Internal error"
+// @Router /auth/register [post]
+func (s *CoinflowServer) RegisterHandler(c *gin.Context) {
+	reqObj, err := types.CreateRegisterRequestObject(c)
+	if err != nil {
+		WriteParseError(c, err)
+		return
+	}
+
+	res, err := s.authCli.Register(&reqObj.User)
+	if err != nil {
+		WriteGrpcError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{
+		"user_id": res,
+	})
+}
+
+// @Summary GetUserData
+// @Description get user data by id
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user_id path string true "User ID"
+// @Success 200 {object} string "OK"
+// @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "Unauthorized"
+// @Failure 500 {object} string "Internal error"
+// @Router /user/{user_id} [post]
+func (s *CoinflowServer) GetUserDataHandler(c *gin.Context) {
+	reqObj, err := types.CreateGetUserDataRequestObject(c)
+	if err != nil {
+		WriteParseError(c, err)
+		return
+	}
+
+	res, err := s.authCli.GetUserData(reqObj.UserId)
+	if err != nil {
+		WriteGrpcError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, res)
 }
