# api-gateway/internal/api/http/types/types.go
@@ -9,6 +9,8 @@ import (
 	"github.com/google/uuid"
 )
 
+// Transactions ---------------------------------------------
+
 type GetTransactionRequestObject struct {
 	TxId 			uuid.UUID
 }
@@ -16,7 +18,7 @@ type GetTransactionRequestObject struct {
 func CreateGetTransactionRequestObject(c *gin.Context) (*GetTransactionRequestObject, error) {
 	const op = "CreateGetTransactionRequestObject"
 
-	txId, err := utils.ParseStringToTransactionId(c.Param("tx_id"))
+	txId, err := utils.ParseStringToUuid(c.Param("tx_id"))
 
 	if err != nil {
 		return nil, fmt.Errorf("%s: %w", op, err)
@@ -57,4 +59,71 @@ func CreatePostTransactionRequestObject(c *gin.Context) (*PostTransactionRequest
 	}
 
 	return &PostTransactionRequestObject{Tx: &tx}, nil
+}
+
+// Users --------------------------------------------------
+
+type LoginRequestObject struct {
+	Login		string	`json:"login"`
+	Password	string	`json:"password"`
+}
+
+func CreateLoginRequestObject(c *gin.Context) (*LoginRequestObject, error) {
+	const op = "CreateLoginRequestObject"
+
+	var req LoginRequestObject
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		return nil, fmt.Errorf("%s: %w", op, err)
+	}
+
+	return &req, nil
+}
+
+type RefreshRequestObject struct {
+	RefreshToken	string	`json:"refresh_token"`
+}
+
+func CreateRefreshRequestObject(c *gin.Context) (*RefreshRequestObject, error) {
+	const op = "CreateRefreshRequestObject"
+
+	var req RefreshRequestObject
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		return nil, fmt.Errorf("%s: %w", op, err)
+	}
+
+	return &req, nil
+}
+
+type RegisterRequestObject struct {
+	User 	models.User 	`json:"usr"`
+}
+
+func CreateRegisterRequestObject(c *gin.Context) (*RegisterRequestObject, error) {
+	const op = "CreateRegisterRequestObject"
+
+	var req RegisterRequestObject
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		return nil, fmt.Errorf("%s: %w", op, err)
+	}
+
+	return &req, nil
+}
+
+type GetUserDataRequestObject struct {
+	UserId	uuid.UUID
+}
+
+func CreateGetUserDataRequestObject(c *gin.Context) (*GetUserDataRequestObject, error) {
+	const op = "CreateGetUserDataRequestObject"
+
+	usrId, err := utils.ParseStringToUuid(c.Param("user_id"))
+
+	if err != nil {
+		return nil, fmt.Errorf("%s: %w", op, err)
+	}
+
+	return &GetUserDataRequestObject{UserId: usrId}, nil
 }
